--- a/_references.bib
+++ b/_references.bib
@@ -337,16 +337,19 @@ series = {IUI '23}
   publisher={Springer}
 }
 
-@article{imperial,
-  title={Generative AI, Everyday Aesthetic Production, and the Imperial Mode of Living},
-  author={Kemper, Jakko},
-  journal={Critical AI},
-  volume={3},
-  number={1},
-  year={2025},
-  publisher={Duke University Press}
+@article{mathur2024advancing,
+  title={Advancing social intelligence in ai agents: Technical challenges and open questions},
+  author={Mathur, Leena and Liang, Paul Pu and Morency, Louis-Philippe},
+  journal={arXiv preprint arXiv:2404.11023},
+  year={2024}
 }
 
+@article{mei2025survey,
+  title={A survey of multimodal retrieval-augmented generation},
+  author={Mei, Lang and Mo, Siyu and Yang, Zhihan and Chen, Chong},
+  journal={arXiv preprint arXiv:2504.08748},
+  year={2025}
+}
 
 @article{wu2025qwen,
   title={Qwen-image technical report},
@@ -436,13 +439,6 @@ url={https://openreview.net/forum?id=PhRYDGqiee}
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2412.01506}, 
-}
-
-@article{shi2023understanding,
-  title={Understanding generative AI in art: an interview study with artists on G-AI from an HCI perspective},
-  author={Shi, Jingyu and Jain, Rahul and Duan, Runlin and Ramani, Karthik},
-  journal={arXiv preprint arXiv:2310.13149},
-  year={2023}
 }
 
 @inproceedings{li2024user,
@@ -1214,4 +1210,117 @@ publisher = "Verso",
   booktitle={Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
   pages={1--14},
   year={2024}
+}
+
+@inproceedings{amershi2019guidelines,
+  title={Guidelines for human-AI interaction},
+  author={Amershi, Saleema and Weld, Dan and Vorvoreanu, Mihaela and Fourney, Adam and Nushi, Besmira and Collisson, Penny and Suh, Jina and Iqbal, Shamsi and Bennett, Paul N and Inkpen, Kori and others},
+  booktitle={Proceedings of the 2019 chi conference on human factors in computing systems},
+  pages={1--13},
+  year={2019}
+}
+
+@book{shneiderman2022human,
+  title={Human-centered AI},
+  author={Shneiderman, Ben},
+  year={2022},
+  publisher={Oxford University Press}
+}
+@article{wood1976role,
+  title={The role of tutoring in problem solving},
+  author={Wood, David and Bruner, Jerome S and Ross, Gail},
+  journal={Journal of child psychology and psychiatry},
+  volume={17},
+  number={2},
+  pages={89--100},
+  year={1976},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@book{vygotsky1978mind,
+  title={Mind in society: Development of higher psychological processes},
+  author={Cole, Michael},
+  year={1978},
+  publisher={Harvard university press}
+}
+
+@article{puntambekar2005tools,
+  title={Tools for scaffolding students in a complex learning environment: What have we gained and what have we missed?},
+  author={Puntambekar, Sadhana and Hubscher, Roland},
+  journal={Educational psychologist},
+  volume={40},
+  number={1},
+  pages={1--12},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+@incollection{shneiderman2008creativity,
+  title={Creativity support tools: A grand challenge for HCI researchers},
+  author={Shneiderman, Ben},
+  booktitle={Engineering the user interface: From research to practice},
+  pages={1--9},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{mitchell2019model,
+  title={Model cards for model reporting},
+  author={Mitchell, Margaret and Wu, Simone and Zaldivar, Andrew and Barnes, Parker and Vasserman, Lucy and Hutchinson, Ben and Spitzer, Elena and Raji, Inioluwa Deborah and Gebru, Timnit},
+  booktitle={Proceedings of the conference on fairness, accountability, and transparency},
+  pages={220--229},
+  year={2019}
+}
+
+@article{gebru2021datasheets,
+  title={Datasheets for datasets},
+  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
+  journal={Communications of the ACM},
+  volume={64},
+  number={12},
+  pages={86--92},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{bender2018data,
+  title={Data statements for natural language processing: Toward mitigating system bias and enabling better science},
+  author={Bender, Emily M and Friedman, Batya},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={6},
+  pages={587--604},
+  year={2018},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+
+@article{lubart2005can,
+  title={How can computers be partners in the creative process: classification and commentary on the special issue},
+  author={Lubart, Todd},
+  journal={International journal of human-computer studies},
+  volume={63},
+  number={4-5},
+  pages={365--369},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{muller1993participatory,
+  title={Participatory design},
+  author={Muller, Michael J and Kuhn, Sarah},
+  journal={Communications of the ACM},
+  volume={36},
+  number={6},
+  pages={24--28},
+  year={1993},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{jansen2021exploring,
+  title={Exploring co-creative drawing workflows},
+  author={Jansen, Chipp and Sklar, Elizabeth},
+  journal={Frontiers in Robotics and AI},
+  volume={8},
+  pages={577770},
+  year={2021},
+  publisher={Frontiers Media SA}
 }
