--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,9 +1,1 @@
-Recent generative AI advances present new possibilities for supporting visual art creation, but how such promise might assist novice artists during early-stage artistic creation processes require investigation.
-% remain 
-% their potentials to assist novice artists during early-stage creative processes remains underexplored. 
-Through interaction practices and (non)-use, novice and emerging artists carry potential to alter the relationship between the artistic community and generative systems.
-We interviewed 15 artists to uncover needs along four key dimensions during early stages of creation: (1) quicker and better access to references, (2) visualizations of reference combinations, (3) external artistic feedback and (4) personalized support to learn new techniques and styles.
-% , while uncovering design tensions -- e.g., control and accuracy vs serendipity and inspiration.
-Mapping such needs to state-of-the-art open-sourced advances, we developed a set of six interactive prototypes to expose emerging capabilities to novice artists. After independent explorations, workshop participants articulated requirements and tensions for artist-centered AI development.
-%-- e.g., control/accuracy vs serendipity/inspiration, as well as use cases that prioritize artistic agency and attribution.
-Our work reveals opportunities to design novice-targeted tools that foreground artists' needs, offering alternative visions for generative AI to serve visual creativity.
+Recent generative AI advances present new possibilities for supporting visual art creation, but how such promise might assist novice artists during early-stage processes requires investigation. How novices adopt or resist these tools can shift the relationship between the art community and generative systems. We interviewed 13 artists to uncover needs in key dimensions during early stages of creation: (1) quicker and better access to references, (2) visualizations of reference combinations, (3) external artistic feedback, and (4) personalized support to learn new techniques and styles. Mapping such needs to state-of-the-art open-sourced advances, we developed a set of six interactive prototypes to expose emerging capabilities to novice artists. Afterward, we conducted co-design workshops with 13 novice visual artists through which artists articulated requirements and tensions for artist-centered AI development. Our work reveals opportunities to design novice-targeted tools that foreground artists' needs, offering alternative visions for generative AI to serve visual creativity.
