--- a/sections/6_workshop_findings.tex
+++ b/sections/6_workshop_findings.tex
@@ -1,22 +1,22 @@
 \section{Phase 2 (Workshop) Findings}
 
-In the following section, we present findings from our co-design workshops. We first report participants' reflections on their interactions with our prototypes and with the existing capabilities of relevant tools. We then describe new capabilities that participants surfaced through the workshops and the ways these expand the design space. Finally, we synthesize cross-cutting design tensions that span the emerging taxonomy of capabilities, highlighting trade-offs that matter for future design and deployment.
+Below we report participants' reflections on interactions with our prototypes and existing capabilities of relevant tools. We then describe new capabilities that participants surfaced through the workshops and the ways these expand the design space. Finally, we synthesize cross-cutting design tensions that span the emerging taxonomy of capabilities, highlighting trade-offs that matter for future design and deployment.
 
 \subsection{Reference, Capture, 3D-Staging} \label{reference}
 
 \subsubsection{Semantic Search and Reference Organization.}
 \label{semantic}
 
-Participants sought tools for semantic search over large image and video sets, returning per frame matches and automatically organizing and deduplicating reference material. We did not provide a prototype, and results are based on participants’ discussions and comparisons to state-of-the-art tools~\cite{VSC, lin2014visual, OrganizingPhoto}\aq{we can remove this sentence if we already said this earlier in methods, but we should keep the citations here}.
-Several participants described ideal use cases for tools that \textbf{search through videos}~\cite{GenQuery, VSC}, expressing desires to use them for the early stages of visual art-making. For example, W10 explained potential benefits of performing an \textit{``\textbf{object search}''} on full videos like they have done for singular images (W10). Additionally, W11 elaborated that a tool such as \textit{Textual Search Video Frame} ~\cite{lin2014visual} could help them do real-time multi-person tracking for interactive art projects that involve body movement (W11). In short, participants described video-level search and frame-level retrieval as scaffolding for early ideation and blocking, which reduces the time spent hunting for references and enables faster iteration on pose and motion.
+Participants sought tools for semantic search over large image and video sets, returning per frame matches and automatically organizing and deduplicating reference material~\cite{VSC, lin2014visual, OrganizingPhoto}.
+Several participants described ideal use cases for tools that \textbf{search through videos}~\cite{GenQuery, VSC}, expressing desires to use them for the early stages of visual art-making. W10 explained potential benefits of performing an \textit{``\textbf{object search}''} on full videos like they have done for singular images. Additionally, W11 elaborated that a tool such as \textit{Textual Search Video Frame} ~\cite{lin2014visual} could help them do real-time multi-person tracking for interactive art projects that involve body movement. In short, participants described video-level search and frame-level retrieval as scaffolding for early ideation and blocking, which reduces the time spent hunting for references and enables faster iteration on pose and motion.
 
-For a tool such as \textit{Organizing Image Collection}~\cite{OrganizingPhoto}, participants such as W13 expressed interest but noted that their personal photo libraries were not large enough to benefit: \textit{``if it were like a better Google of like finding references, that would be great. But if it were out of my own references, I just don't think I take that many photos''} (W13). Instead, W13 explained that they wanted these functions for the reference images they save from Google Search or other sources online instead. 
+For a tool such as \textit{Organizing Image Collection}~\cite{OrganizingPhoto}, participants such as W13 expressed interest but noted that their personal photo libraries were not large enough to benefit: \textit{``if it were like a better Google of like finding references, that would be great. But if it were out of my own references, I just don't think I take that many photos''}. Instead, W13 explained that they wanted these functions for the reference images they save from Google Search or other sources online instead. 
 Together, the findings suggest that semantic search and \textbf{automatic organization of reference libraries} would materially lower the cost of finding poses and motions during early stages for artists.
 
 
 \subsubsection{Pose and Camera Control with On-demand Reference Capture.}
 \label{pose}
-Participants prioritized fine-grained pose and camera control, with on-demand reference capture and structure-preserving remix. They used Interactive 3D to explore complete angles and perspectives while comparing it to model-driven pose and view edits in prior tools~\cite{wu2025qwen}. Reflecting on their experiences with our \textit{Interactive3D} prototype, artists described 3D models as helpful for \textbf{viewing a subject from a specific perspective} (W11, 13). However, they also raised concerns about fidelity: \textit{``messed up anatomy, or [other] messed up things that are not true reality---I'm afraid of that lessening my knowledge of the real world''} (W13). In short, participants valued \textbf{direct camera and pose control} in 3D as a dependable way to generate accurate references with trustworthy anatomical fidelity.
+Participants prioritized fine-grained pose and camera control, with on-demand reference capture and structure-preserving remix. They used Interactive 3D to explore complete angles and perspectives while comparing it to model-driven pose and view edits in prior tools~\cite{wu2025qwen}. Reflecting on their experiences with our \textit{Interactive3D} prototype, artists described 3D models as helpful for \textbf{viewing a subject from a specific perspective} (W11, 13). However, they also raised concerns about fidelity: \textit{``messed up anatomy, or [other] messed up things that are not true reality---I'm afraid of that lessening my knowledge of the real world''}. In short, participants valued \textbf{direct camera and pose control} in 3D as a dependable way to generate accurate references with trustworthy anatomical fidelity.
 
 Beyond seeing its value for perspective referencing, participants also proposed concrete improvements to \textit{Interactive3D}. 
 W1 wanted to change skin textures to make a model look \textit{``younger or older, or rougher or smoother''}, W2 desired fine-grained control of a model (e.g., manipulating precise finger and wrist poses) while W5 suggested integration with existing workflows (e.g., model download as an OBJ file). Taken together, these point to complementary workflows: (1) \textbf{study mode} with deep control and export for detailed reference building, and (2) \textbf{quick capture mode} that limits controls for speed and focus.
@@ -42,9 +42,9 @@ Additionally, participants provided suggestions for improving 3D editing tools t
 
 Participants also expressed interest in tools for breaking references into meaningful layers and controlling what to focus on: layered, structure preserving simplification with simple toggles for focus~\cite{swiftsketch, neutralstroke, wu2025qwen}. 
 % Several participants reflected on instances where such tools would be useful within their early-stage workflows. 
-For example, W9 highlighted a blockout view as especially useful for assisting them in reading landscape forms (W9)~\cite{wu2025qwen}. Others noted the use of \textit{SwiftSketch} for reducing complex forms such as robots into simpler blocks (W4 and W10). Overall, these accounts point to imagined tool uses for layered decomposition, supporting exploration in early-stages.
+For example, W9 highlighted a blockout view as especially useful for assisting them in reading landscape forms ~\cite{wu2025qwen}. Others noted the use of \textit{SwiftSketch} for reducing complex forms such as robots into simpler blocks (W4 and W10). Overall, these accounts point to imagined tool uses for layered decomposition, supporting exploration in early-stages.
 
-We also surfaced pitfalls and changes needed for tools. Some disliked filter style simplifications that merely restyle images \textit{``when it asks it to be more simple it looks like a pencil sketch filter''} and qualitative prompts such as \textit{simple} that do not map to consistent levels of abstraction (W10). These participants asked for progressive breakdowns of references with features such as \textbf{structure-preserving edits, automatic pose abstractions}, and numeric controls such as \textbf{stroke count} (W10). Across layers, several participants also expressed desires to \textbf{mute or spotlight subjects}, and \textbf{plan major forms and composition} quickly (W8, W9, and W10)~\cite{neutralstroke}. Moreover, W8 wanted a tool that took a values-first view, \textit{``think[ing] in areas of dark and light \dots rather than objects,''} run alongside object-aware layers to avoid color filter distraction (W8). These needs point to the potential of tools that can help participants break references into meaningful layers and control focus within references.
+We also surfaced pitfalls and changes needed for tools. Some disliked filter style simplifications that merely restyle images \textit{``when it asks it to be more simple it looks like a pencil sketch filter''} and qualitative prompts such as \textit{simple} that do not map to consistent levels of abstraction (W10). These participants asked for progressive breakdowns of references with features such as \textbf{structure-preserving edits, automatic pose abstractions}, and numeric controls such as \textbf{stroke count} (W10). Across layers, several participants also expressed desires to \textbf{mute or spotlight subjects}, and \textbf{plan major forms and composition} quickly (W8, W9, and W10)~\cite{neutralstroke}. Moreover, W8 wanted a tool that took a values-first view, \textit{``think[ing] in areas of dark and light \dots rather than objects,''} run alongside object-aware layers to avoid color filter distraction. These needs point to the potential of tools that can help participants break references into meaningful layers and control focus within references.
 
 % Our analysis shows that artist needs for layered, anatomy-aware scene decomposition with fine-grained focus control, tools that can peel an image from big value masses to simple block-outs, construction lines, pose abstractions, and then back up to muscles/planes/shading, while letting them isolate or mute elements and prioritize focal planes without redrawing. Although we did not show a prototype, participants evaluated the capability concept against their practice and current tools. They welcomed layered breakdowns that go beyond silhouettes to reveal internal flow: “the outline…still extends into the inner part of the drawing…you’re following the inner direction of your skeleton,” so “just doing the outline like the silhouette isn’t really enough” (W10). They disliked filter-like simplifications that merely restyle images (“when it asks it to be more simple, it…looks like a pencil-sketch filter”) and qualitative prompts (“simple/simpler”) that don’t map to consistent abstraction levels (W10). Artists want progressive processes that step through pose, muscles, planes, shading with true structure-preserving edits, automatic pose abstractions such as stick figures and gesture “to summarize the pose into a more understandable form,” and use numeric controls for abstraction (e.g., stroke count, line density, shading level) so simplification is predictable and repeatable (W10). For 2D study, they also asked for a values-first view that “thinks in areas of dark and light…rather than objects,” run alongside object-aware layers to avoid “candy filter” distraction (W8). Across all layers, they want to toggle and mute parts, spotlight subjects, and quickly plan major forms and composition.
 
@@ -60,7 +60,8 @@ Participants wanted crisp zoom, resolution enhancement, and texture inspection t
 When testing our \textit{Visual Editing} tool, they praised the non-destructive history for safe exploration before touching the real piece, because it let them “trace your steps back or forward” (W3). They were frustrated when style controls felt vague or cosmetic. The ``pencil sketch'' option did not behave like real pencil and lines felt generic, and the tool handled photo fixes or collage effects better than preserving a specific drawing style (W8).
 Edits sometimes ignored source style or color requests, for example asking for ``pink pastel'' produced neon or dark tones, and overall the tool often drifted into a different style than the original (W4). Participants also asked for fine control over faces and materials, indicating interests in structure-preserving when applying local changes to an image. They also noted upon zooming-in and extracting details for changes, tools should be intent-aware and edge-aware that goes beyond rigid selections and proactively clarifies ambiguous requests. For example, when a user says ``change shirt to hoodie,'' the tool should ask whether to replace the garment, add a graphic, recolor it, or adjust the fit (W10). 
 
-Other tools helped participants round out this capability. W4 preferred outfit-focused detail zoom from \textit{Qwen-Image} for recreating historical clothing, asking for true pattern extraction so users can capture motifs for cosplay or pattern making. W8 praised \textit{GenQuery}-style controls that vary a single element inside a scene -- they also asked for a simple adjustment slider to study and change styles with clear controlled variation. W12 valued resolution upscaling to turn low-resolution assets into high-resolution references, as long as structure stays intact and details do not get invented. \jh{is invented the right word here?}
+Other tools helped participants round out this capability. W4 preferred outfit-focused detail zoom from \textit{Qwen-Image} for recreating historical clothing, asking for true pattern extraction so users can capture motifs for cosplay or pattern making. W8 praised \textit{GenQuery}-style controls that vary a single element inside a scene -- they also asked for a simple adjustment slider to study and change styles with clear controlled variation. W12 valued resolution upscaling to turn low-resolution assets into high-resolution references, as long as structure stays intact and details do not get made up. 
+% \jh{is invented the right word here?}
 
 \subsubsection{Controllable Style Analysis, Transfer, and Combination.}
 \label{style}
@@ -128,7 +129,7 @@ For critique, participants want a hybrid loop that respects intent. When shown t
 
 
 
-In this section, we highlight tensions that emerged throughout participants' reflections on capabilities in the co-design workshops. 
+In this section, we highlight tensions that emerged through participants' reflections on capabilities in co-design workshops. 
 
 \subsubsection{Assistance vs Independence.} 
 A major tension emerged around how much assistance models should provide while still preserving novice artists agency and workflow. Participants welcomed tools that could teach and scaffold within the early-stages of their workflow, but insisted that such guidance should not steer their work. W8 wanted live \textit{``what this looks like''} matches based on art history and pop-culture to build taste and test how others might read their work, but warned that real-time labeling risks boxing them in byimporting biased and clichéd references, discouraging originality, and breaking creative flow (W8). W8 suggested offering multiple procedural paths with a simple timeline to switch among them, prompts such as \textit{``what else could go here?''}) to invite abstraction, and light intent checking (\textit{``here’s how I read your prompt, here is how my model works''}) so agency remains with the artist(W8).
@@ -150,7 +151,7 @@ Moreover, participants also weighted realism against the importance of pieces ha
 % A similar tension emerged between generated content that look too realistic vs those that are slightly imperfect, but retaining the `human touch'. For example, both W1 and W7 complained that a lot of the generated output from the prototypes (e.g., style transfer) looked very ``AI'' in that they had to regenerate several times to get a non-generic output. W7 explained how the generated image in style transfer \textit{``looks so good''} but also felt like \textit{``AI art''}. W2 wanted integrated AI tools (in software like Procreate/Photoshop) that improved their workflow by fixing proportions and lighting, or refining their style, but without generic outputs that look \textit{``too AI''}.
 
 \subsubsection{Values versus Concerns of AI.} 
-There was also tension between artists, who despite seeing the value of AI as tools, are also aware of their potential in exploiting artists like themselves. Participants saw value in tools that took advantage of AI capabilities, but hestitated to trust them. W3 found it difficult to use AI tools to help improve their art because the even the act of uploading their art means that AI could plagiarize it. Moreover, W1 said that they would not unless contributing artists had granted permission for the use of their work. W5 further noted that they would feel comfortable only once artists were fairly compensated as well. As such, we found that participants tied trust to practices of consent and transparency, advocating for AI that was trained on public domain or opt-in licensed data and payment to artists. 
+There was also tension between artists, who despite seeing the value of AI as tools, are also sensitive to their potential in exploiting artists like themselves. Participants saw value in tools that took advantage of AI capabilities, but hestitated to trust them. W3 found it difficult to use AI tools to help improve their art because the even the act of uploading their art means that AI could plagiarize it. Moreover, W1 said that they would not unless contributing artists had granted permission for the use of their work. W5 further noted that they would feel comfortable only once artists were fairly compensated as well. As such, we found that participants tied trust to practices of consent and transparency, advocating for AI that was trained on public domain or opt-in licensed data and payment to artists. 
 
 Furthermore, participants wanted to be able to teach AI systems without copying the output. The reasoning behind this stemmed from a view of style as personal characteristic that some participants compared to handwriting (e.g., W10). W1 argued that \textit{``drawing a reference generated exactly from AI is the same as copying someone else's art and that you shouldn't be able to claim that as your own work, but you can copy as more of a learning process''} (W1). W8 advocated for turning tools into learning aids to help artists draw their own icons, for example, rather than copying the words of others (W8). Overall, participants strongly advocated for consent-based, transparent tools that could help novice artists such as themselves build skills and provide guidance while avoiding appropriation. 
 
