--- a/sections/7_discussion.tex
+++ b/sections/7_discussion.tex
@@ -1,31 +1,27 @@
 \section{Discussion}
 
 \subsection{Supporting Artistic Skill-building via Enhanced Agency \& Control}
-\todo{Alice's thought: I think we should have a section about the immense opportunity we found in designing tools to help artists build skills rather than like replace them -- we can maybe cite some of the learning sciences lit Haiyi was talking about for the proposal?}
-\jh{agreed!}
+% \jh{agreed!}
 
-\begin{itemize}
-    \item At individual levels: 2d \& 3d artists perceive artistic control differently
-    \item involving community engagement \& feedback or environmental factors
-\end{itemize}
-
-==== copied over from proposal, if we want to include in discussion ====
-
-Our next aim is to use \textbf{scaffolding} techniques inspired by the learning sciences~\citep{gibbons2002scaffolding}, where temporary support is provided to help a learner complete a task beyond their current unaided ability, but gradually removed to improve the capabilities, creativity, and independence of novice artists over time. Applying scaffolding is a major challenge since modern  generative AI is not transparent, with limited abilities to `unlearn' knowledge~\citep{bourtoule2021machine}, and easy hackable~\citep{wei2023jailbroken}. To tackle this, we will design our system as a set of modules strictly partitioned to enable unlearning, and with strict guardrails so users cannot access removed capabilities during scaffolding. We will base our design on best practices in designing educational tools. Novice artists will have access to full scaffolding (e.g., step-by-step sketching, adaptations, and recombinations) at the beginning. As they progress, the scaffolding will be gradually removed. We will co-design and pilot-test the system with both novice and experienced artists, as well as educators. 
-
-We will measure upskilling through a combination of self-assessment scales from the education literature, performance-based tasks that track improvement pre-and post- system integration as well as a series of longitudinal user studies. In addition to improving novice artist capabilities, our system will also improve their creativity through challenging them to deviate from historical styles and help creativity and personalization. More broadly, this creativity scaffolding has implications for other domains where human–AI collaboration is critical, including design, education, and knowledge work, pointing toward new ways of using AI not just to automate but to cultivate human creativity and growth.
+% \begin{itemize}
+%     \item At individual levels: 2d \& 3d artists perceive artistic control differently
+%     \item involving community engagement \& feedback or environmental factors
+% \end{itemize}
 
 
+\subsubsection{Individual-Level Support}
+Our analysis points to concrete opportunities for individual-level support of novice artists in the early stage of art making. Novice artists want support to create in the early stages with confidence while preserving agency and authorship. Prior work on agency, disclosure, and learning offers useful principles for early-stage assistance~\cite{shneiderman2022human, amershi2019guidelines}. There are clear opportunities to support art skill-building with capabilities that improve interaction and access to references. Useful directions include guided reference curation, similarity and diversity controls for exploring sets of references, sketch to reference matching, and lightweight prompts that teach search strategies as people work ~\cite{vygotsky1978mind, wood1976role, puntambekar2005tools}. Interfaces should foreground provenance and allow people to filter by source type, license, and stylistic attributes so that reference use is intentional and creditable ~\cite{mitchell2019model, gebru2021datasheets, bender2018data}. In this frame, the system may serve as a studio partner that accelerates exploration without overriding intent. Control is a central requirement for individual artists who interact with these tools. Participants wanted adjustable model influence, visibility into sources and transformations, and simple ways to accept, revise, or discard suggestions ~\cite{amershi2019guidelines, lubart2005can}. Designs should default to reversible edits, versioning, and private workspaces, with explicit choices to share or credit others. Such controls help novices learn with assistance while keeping authorship clear and decisions recoverable.
 
 
+\subsubsection{Interaction-Level Support}
+Our findings indicate that early-stage creativity is not only individual but also deeply social. Participants asked for spaces that make it easy to learn with and from others, frequently imagining a Hugging Face for artists that hosts references, process notes, prompts, and works in progress with clear credit ~\cite{ko2023large, wang2025aideation, everybody_sketch, PortraitSketch}. The design problem at this level is less about accelerating a single user’s search and more about building the social and technical infrastructure that turns many small contributions into shared knowledge ~\cite{magiccolor, yan2025imagereferencedsketchcolorization, trellis, wang2021screen2words, li2025voxhammer}. Distinct capabilities emerge in shared spaces. Discovery and matchmaking can connect novices to peers, mentors, and example workflows that fit their goals and skill levels ~\cite{chi2020automatic, chi2022synthesis}. Second, lineage-aware remixing can record how assets, prompts, and sketches relate, so that reuse is traceable and creditable across iterations ~\cite{lima, kawakami2024impact, foreground, giacomin2023intersection}. Community challenges and curated playlists of processes can function as shared curricula that scaffold progress from simple studies to more independent projects ~\cite{puntambekar2005tools}. In sum, interaction level support treats the system as a studio commons rather than only a generator of outputs. By investing in discovery, lineage, feedback, and governance, these spaces can turn individual experiments into collective learning while keeping consent, credit, and accountability legible.
 
 \subsection{Policy Recommendations for ethical development/training AI/compensation}
-Our analysis points to the importance of policy that guides the positive use of these tools so novice artists can build skills while avoiding exploitation. Prior work documents a history of harm to artists in AI development, including unconsented training\todo{cite}, weakened attribution and compensation~\cite{kawakami2024impact, foreground}, and the straightening of expression through biased and homogenized outputs \cite{unstraighten}. We read our findings as prompts for community dialogue and governance rather than fixed prescriptions. Trust rests first on consent, compensation, and provenance. Participants linked willingness to use integrated features to permission and pay, and asked for visible signals about where data came from. As such, it may be beneficial to favor public domain or opt in licensed data, compensate contributors, and make provenance and labeling visible across search, editing, and sharing so creators know what they are using. Clear source tracing and labeling also reduce the risk that novices inadvertently treat synthetic images as authoritative references.
+Our analysis points to the importance of policy that guides the positive use of these tools so novice artists can build skills while avoiding exploitation. Prior work documents a history of harm to artists in AI development, including unconsented training~\cite{shi2023understanding, decolonial, giacomin2023intersection}, weakened attribution and compensation~\cite{kawakami2024impact, foreground}, and the straightening of expression through biased and homogenized outputs \cite{unstraighten}. We read our findings as prompts for community dialogue and governance rather than fixed prescriptions. Trust rests first on consent, compensation, and provenance. Participants linked willingness to use integrated features to permission and pay, and asked for visible signals about where data came from. As such, it may be beneficial to favor public domain or opt-in licensed data, compensate contributors, and make provenance and labeling visible across search, editing, and sharing so creators know what they are using. Clear source tracing and labeling also reduce the risk that novices inadvertently treat synthetic images as authoritative references.
 
-Policies should also preserve agency while still offering help. Participants welcomed guidance that teaches and scaffolds, provided it does not steer the work or collapse stylistic diversity. Sensible defaults include opt-in guidance with visible intent checks, multiple procedural paths rather than a single route, and feedback that is confident where ground truth exists, such as anatomy, perspective, and lighting, while remaining non-prescriptive for subjective choices like style or palette. When tools produce references for pose, perspective, or lighting, accuracy safeguards and quality warnings are prudent so learners are not taught the wrong thing, especially in 3D reference workflows.
-
-Finally, participants imagined community infrastructure that supports learning without eroding integrity. Provenance-rich spaces that share processes and remixes, coupled with privacy and consent controls, are more likely to sustain participation and skill building\todo{connection to related work and citations}. Several participants also raised environmental costs, which suggests disclosure of energy and emissions and greener defaults as part of responsible deployment\todo{citations}. In sum, our findings motivate higher level guidelines and accountability across development, use, and audit. 
+Policies should also preserve agency while still offering help. Participants welcomed guidance that teaches and scaffolds, provided it does not steer the work or collapse stylistic diversity. Sensible defaults include opt-in guidance with visible intent checks, multiple procedural paths rather than a single route, and feedback that is confident where ground truth exists, such as anatomy, perspective, and lighting, while remaining non-prescriptive for subjective choices like style or palette. When tools produce references for pose, perspective, or lighting, accuracy safeguards and quality warnings are prudent so learners are not taught the wrong thing, especially in 3D reference workflows. Finally, participants imagined community infrastructure that supports learning without eroding integrity. Provenance-rich spaces that share processes and remixes, coupled with privacy and consent controls, are more likely to sustain participation and skill building~\cite{mitchell2019model, gebru2021datasheets}.  In sum, our findings motivate higher-level guidelines and accountability across development, use, and audit.
 
 
 
 \subsection{Limitations \& Future Work}
+Our qualitative approach enabled rich and nuanced accounts of early-stage art making, yet it does not represent the full diversity of novice artists. Future work should broaden coverage with larger surveys across regions and training backgrounds, and with comparative studies that include non-student and community artists. Additionally, self-report and reflection may not fully align with the actual practice of our participants, as is the limitation of the nature of our methodology that has been previously acknowledged~\cite{jansen2021exploring}. Participants reflected on ethical and policy questions specific to early-stage tools, yet it was not within the scope of our study to evaluate legal frameworks or institutional processes in depth. Future work should connect design proposals to analyses of consent, compensation, provenance requirements, and audit mechanisms in real organizational settings. Finally, while we utilized the interdisciplinary expertise of our research team to inform the development of our prototypes, it would be beneficial for future work to further examine the perspectives of commercial generative AI model practitioners to better understand the challenges in developing techniques such as semantic search. Accurate semantic search across multiple visual mediums remains a challenge in generative AI, although recent efforts in multimodal retrieval-augmented-generation~\citep{mei2025survey} are closing this gap. Other capabilities related to providing visual feedback and supportive learning communities to novice artists are also difficult, since the majority of generative models are critically lacking in social and embodied intelligence~\citep{mathur2024advancing}. Despite these challenges, we believe that our contributions can inspire the design of next-generation generative AI systems that support the creativity, learning, and agency of novice artists.
