--- a/tables/demographics.tex
+++ b/tables/demographics.tex
@@ -47,7 +47,8 @@ P12 & Pencil, Acrylic Paint, Pastels, Watercolor, Chalk & Digital drawing painti
 P13 & Pencil, Acrylic Paint, Pastels, gouache or acrylic gouache, embroidery, knitting & Digital drawing and painting & None &  Google Image Search\\
 \bottomrule
 \end{tabular}
-\caption{Phase 1 participant backgrounds}
+\caption{Phase 1 participant backgrounds.}
+\label{tab:interview-demographics}
 \end{table}
 
 
@@ -74,6 +75,7 @@ W12 & Pencil, Ink & Digital painting & ChatGPT, DALL E, Midjourney, Stable Diffu
 W13 & Digital Art 6 years, pencil drawing 8 years, acrylic painting 3 years & Pencil, Acrylic Paint &  None & Google Image Search, Pinterest, Artist Reference Websites (e.g., ArtStation), Taking my own photos \\
 \bottomrule
 \end{tabular}
-\caption{Participant backgrounds for media, AI usage, and references}
+\caption{Participant backgrounds for media, AI usage, and references.}
+\label{tab:workershop-demographics}
 \end{table}
 
