--- a/sections/3_method.tex
+++ b/sections/3_method.tex
@@ -3,41 +3,23 @@
     \centering
     \resizebox{.7\textwidth}{!}
     {\includegraphics{figures/methods.png}}
-    \caption{Overview of Phase 1 \& Phase 2 Methods. \todo{do we want to add more description here?} }
+    \caption{Overview of Phase 1 \& Phase 2 Methods.}
     \label{fig:method}
 \end{figure}
 
 \section{Methods}
-We start with describing and reflecting on our positions as researchers in this project. Then we describe our process conducting semi-structured interviews with novice artists (\S\ref{interview}), resulting in a taxonomy of their challenges, which we mapped to emergent generative capabilities (\S\ref{map}). Between the two phases, our process
+We start by describing and reflecting on our positions as researchers in this project. Then we describe our process conducting semi-structured interviews with novice artists (\S\ref{interview}), resulting in a taxonomy of their challenges, which we mapped to emergent generative capabilities (\S\ref{map}). Between the two phases, our process
 mapping artistic challenges and needs to nascent techniques helped us identify relevant tools and build prototypes (See \autoref{fig:prototypes}) that we presented to participants as probes in Phase 2 (\S\ref{probes}).
 This two-phase approach grounded our research in the lived realities and vocabularies of the artistic population we sought to understand and support. 
-% \paul{refer to figure 1 at some point?}
-
-% desc interviews in Phase I
-
-% \todo{move this to intro: that we then  }
-
-% After developing the taxonomy of needs (\S ref needs table), mapping them to emergent generative capabilities, and creating corresponding probes (\S\ref{probes}), we introduced the (1) taxonomy of needs and (2) six probes to participants via an onboarding session. At the beginning of sessions, we provided the taxonomy of four needs, along with
 
 
-\subsection{Positionality Statement}
-\label{positionality}
-
-This research was conducted by a multidisciplinary team of researchers based in the United States, with backgrounds in human-computer interaction (HCI), software engineering (SE) and machine learning (ML) across five institutions. %jhu, stanford, usc, mit, cmu
-Our epistemologies --- as well as geographic and institutional positioning --- shaped the scope and framing of this work, including access to participants and assumptions around digital infrastructure, language, and AI tool availability. 
-Several team members have prior experience in visual art and related creative fields, informing our interpretations of participants' accounts. 
-However, we take a critical and reflexive approach throughout the process
-to continuously sensitize to potential downstream impacts and ethical implications of this approach towards novice artists and the broader artistic community, especially regarding issues of authorship, labor, and creative autonomy. 
-We acknowledge how our dual roles---as both system designers and analysts---position us in complex relation to the communities we study. Throughout this work, we aimed to center the lived experiences and values of novice artists, while reflecting critically on how our own positionalities shape the tools and narratives we construct and introduce, so as to avoid unintentionally substituting our voices over those of the artists, who we aim to serve. Finally, we recognize that our identity as U.S.-based researchers limits abilities to fully capture the diverse and global artistic practices across experience levels and cultural contexts. 
-
-
-\subsection{Phase 1: Interview Methods} \label{interview} % Alice 
-To understand nuanced perspectives of novice artists' needs, we conducted semi-structured qualitative interviews with 13 novice artists working across a range of mediums and practices. \todo{Outline procedures in terms of how we asked many to describe stages of their artistic practice, preferences of mediums and tools, considerations etc.} This approach allowed us to capture rich, situated insights about the needs artists have in the early stages of visual art creation. Our interviews focused on participants' current practices with visual art creation in the early stages, tools used, and challenges faced. This initial interview phase informed the development of a taxonomy of four key areas of support for novice artists.
+\subsection{Phase 1: Interview Methods} \label{interview} 
+To understand nuanced perspectives of novice artists' needs, we conducted semi-structured qualitative interviews with 13 novice artists working across a range of mediums and practices. We first asked participants to describe the early-stages of their art-making processes from the inspiration that leads to the conception of an idea for a piece to later searching for references to use. We then asked follow-up questions about how participants encounter, search for, and get references and inspiration. We also asked participants about the challenges they experienced using digital and AI tools. This approach allowed us to capture rich, situated insights about the needs artists have in the early stages of visual art creation. Our interviews focused on participants' current practices with visual art creation in the early stages, tools used, and challenges faced. This initial interview phase informed the development of a taxonomy of four key areas of support for novice artists.
 
 \input{tables/demographics}
 
 \subsubsection{Interview Recruitment.}
-We recruited participants who self-identified as novice visual artists to better understand and support their early-stage creative practices. To ensure a diverse range of experiences, we sampled participants with varying degrees of familiarity with physical and digital art mediums. Recruitment was conducted through a combination of snowball sampling and calls posted on university-affiliated online platforms and listservs. All participants were based in the United States and fluent in English. See Table \ref{tab:interview-demographics} for participant demographics. Participants received \$30 USD for completing a 60-minute interview with at least one of the 4 authors. 
+We recruited participants who self-identified as novice visual artists to better understand and support their early-stage creative practices. To ensure a diverse range of experiences, we sampled participants with varying degrees of familiarity with physical and digital art mediums. Recruitment was conducted through a combination of snowball sampling and calls posted on university-affiliated online platforms and listservs. All participants were based in the United States and fluent in English. See Table \ref{tab:interview-demographics} for participant demographics. Participants received \$30 USD for completing a 60-minute interview with at least one of the first 4 authors. All compensation was given via the form of online gift cards.
 
 \subsubsection{Data Analysis.}
 We conducted reflexive thematic analysis~\cite{braun2019reflecting} on interview transcripts to identify patterns in participants’ experiences and design feedback. Our process began with first-cycle open coding to surface recurring concepts across interviews and workshops. In the second cycle, we grouped codes into broader thematic categories that reflected early-stage creative processes and challenges that novice visual artists encounter. 
@@ -47,35 +29,47 @@ Three researchers collaboratively coded the dataset, engaging in memo writing th
 \subsection{Mapping Artistic Challenges to Generative Capabilities \& Developing Probing Prototypes}
 \label{map}
 
-The ground-up need-finding and analysis process resulted in Figure~\ref{fig:prototypes} \todo{i assume we just doing sankey and not table}, containing four higher-level and ten more granular challenges. Internally, our team members worked together to categorize these under early stages of the novice artistic workflow, and mapped a selection of these with emerging generative techniques that our team perceived as potential matches. Based on identified matches, we selected \todo{how do we explain there are 8 but we only implemented 6? that the other 2 are not mature enough AI technology?} six recently-released and open-sourced techniques that carry capabilities relevant to our participants' artistic needs, and subsequently built interfaces to surface these tools -- detailed in \S\ref{probes}. 
+The ground-up need-finding and analysis process resulted in Figure~\ref{fig:prototypes}, containing four higher-level and ten more granular challenges. Our research team worked together to categorize these under early stages of the novice artistic workflow, and mapped a selection of these with emerging generative techniques that our team perceived as potential matches. Based on identified matches, we selected six recently-released and open-sourced techniques that carry capabilities relevant to our participants' artistic needs, and subsequently built interfaces to surface these tools -- detailed in \S\ref{probes}. We note that we did not provide prototypes for all of the challenges because of readily available technologies (e.g., Google Search for semantic search). 
 % \jh{for the team: we have time constraints, but there's a chance to conduct follow up analysis for the need validation during revise and resubmit if desired/necessary}
 
 \begin{figure}[tbp]
     \centering
     \resizebox{\textwidth}{!}
-    {\includegraphics{figures/sankey.png}}
+    {\includegraphics{figures/sankey.pdf}}
     \vspace{-0mm}
-    \caption{\textbf{Mapping of higher-level and granular challenges, relevant existing tools, and broader generative tool categories} We find that users broadly face 4 higher-level challenges: (1) quicker and better access to references, (2) visualizing combinations of references, (3) perspective and feedback from another artist, and (4) support to learn art techniques and styles, which expand into ten more granular challenges. Based on these needs, we developed 6 prototypes demonstrating the potential for AI tools to augment creative workflows \todo{2 more, semantic search and visual interpretations, are highlighted in grey as ones that address key challenges but there do not yet exist robust AI models with those capabilities}. At a high level, these tools enable (1) reference, capture, 3D-staging, (2) structure-to-style refinement, and (3) transparency, learning, community. \todo{if folks could check this} }
+    \caption{\textbf{Mapping of higher-level and granular challenges, relevant existing tools, and broader generative tool categories} We find that users broadly face 4 higher-level challenges: (1) quicker and better access to references, (2) visualizing combinations of references, (3) perspective and feedback from another artist, and (4) support to learn art techniques and styles, which expand into ten more granular challenges. Based on these needs, we developed 6 prototypes demonstrating the potential for AI tools to augment creative workflows.}
     \label{fig:prototypes}
 \end{figure}
+
+% \todo{2 more, semantic search and visual interpretations, are highlighted in grey as ones that address key challenges but there do not yet exist robust AI models with those capabilities}. At a high level, these tools enable (1) reference, capture, 3D-staging, (2) structure-to-style refinement, and (3) transparency, learning, community. \todo{if folks could check this} 
 
 
 % \subsubsection{Pre-workshop Prototype Interaction}
 Then, we invited participants to 30-min onboarding sessions to (1) share, discuss and reflect on the taxonomy of novice artist challenges and (2) introduce the six interfaces as prototype tools. 
-The additional step of sharing Table \ref{tab:phase1-summary} \todo{missing reference} intended to give participants opportunities to give feedback on and refine our taxonomy. 
+The additional step of sharing Table \ref{tab:phase1-summary} intended to give participants opportunities to give feedback on and refine our taxonomy. 
 The six interfaces were initially introduced at this stage so that participants can use prototypes on their own time, situated within their natural artistic workflows. 
 To maximize comfort, we also warned participants that although our team would not explicitly collect data from their art pieces, the underlying models may not guarantee the same. 
-% \todo{maybe move this somewhere else}. 
-\todo{@Cindy: add the questions we had in the slides}. 
-We also viewed observations from participants prior to workshop sessions to better inform how we would facilitate the discussions. 
+We asked participants to reflect on how prototypes were helpful in the workflow, aspects that could be improved, and other concerns they had when interacting with each prototype. These reflections were written down prior to workshops. 
+We then used these reflections to inform how we would facilitate discussions in the co-design workshops. Participants were compensated with \$20 USD for participation in the onboardings sessions as well as an additional \$20 for an estimated 30-45 minutes of interaction with our prototypes on their own time. 
 
-\subsection{Phase 2 Codesign Methods}
+\subsection{Phase 2 Co-design Methods}
 \label{codesign} % Cindy• Individual sessions that validated Taxonomy v1 (all needs) in one diagram 
 
 % • Literature-informed-add-ons of plausible capabilities/considerations added from prior work before workshops
 % • Meanwhile, participants completed HW to try out 6 lightweight prototypes as provocations we asked them to do before workshop
 
 \subsubsection{Co-Design Workshops with Novice Artists.}
-To further investigate potential tensions when implementing tools to address the four challenges identified, we conducted four workshops with 3–4 participants each --- recruited first from our interview pool, and later through social media postings and snowball sampling via referrals. The workshops were designed to create space for artists to converse with one another, compare experiences, and collectively reflect on the promises and complications of emerging AI tools. Each session began with participants reflecting on six prototype concepts\todo{add explanation of co-design methodology and cite examples of other papers that have done this}. We asked them to discuss challenges that might emerge when using such tools in their own practices, as well as opportunities for improvement. After this exercise, we introduced participants to examples of state-of-the-art tools identified through a survey of recent HCI and creativity support research\todo{need to explain how we did this selection}. These examples were not intended to be comprehensive, but rather to highlight representative directions in current research and to prompt further reflection on potential developments and frictions. Finally, throughout the discussions, we encouraged participants to consider the broader ethical and practical implications of generative AI systems in art-making --- asking them to reflect on risks that may arise for novices and communities, as well as to share any recommendations for how such systems could better support creative growth while mitigating unintended consequences.
+To further investigate potential tensions when implementing tools to address the four challenges identified, we conducted four workshops with 3–4 participants each --- recruited first from our interview pool, and later through social media postings and snowball sampling via referrals (see Table \ref{tab:workershop-demographics}). The workshops were designed to create space for artists to converse with one another, compare experiences, and collectively reflect on the promises and complications of emerging AI tools. This approach mirrors prior CHI work that uses workshop-based co-creation around early prototypes to envision and critique creative tools ~\cite{muller1993participatory}. Each session began with participants reflecting on six prototype concepts. We asked them to discuss challenges that might emerge when using such tools in their own practices, as well as opportunities for improvement. After this exercise, we introduced participants to examples of state-of-the-art tools identified through a survey of recent HCI and creativity support research.
+% \todo{need to explain how we did this selection}.
+These examples were not intended to be comprehensive, but rather to highlight representative directions in current research and to prompt further reflection on potential developments and frictions. Finally, throughout the discussions, we encouraged participants to consider the broader ethical and practical implications of generative AI systems in art-making --- asking them to reflect on risks that may arise for novices and communities, as well as to share any recommendations for how such systems could better support creative growth while mitigating unintended consequences. Participants were compensated with \$40 each for participation in co-design workshops.
 
 
+\subsection{Positionality Statement}
+\label{positionality}
+
+This research was conducted by a multidisciplinary team of researchers based in the United States, with backgrounds in human-computer interaction (HCI), software engineering (SE) and machine learning (ML) across five institutions.
+Our epistemologies --- as well as geographic and institutional positioning --- shaped the scope and framing of this work, including access to participants and assumptions around digital infrastructure, language, and AI tool availability. 
+Several team members have prior experience in visual art and related creative fields, informing our interpretations of participants' accounts. 
+However, we take a critical and reflexive approach throughout the process
+to continuously sensitize to potential downstream impacts and ethical implications of this approach towards novice artists and the broader artistic community, especially regarding issues of authorship, labor, and creative autonomy. 
+We acknowledge how our dual roles---as both system designers and analysts---position us in complex relations to the communities we study. Throughout this work, we aimed to center the lived experiences and values of novice artists, while reflecting critically on how our own positionalities shape the tools and narratives we construct and introduce, so as to avoid unintentionally substituting our voices over those of the artists, whom we aim to serve. Finally, we recognize that our identity as U.S.-based researchers limits our ability to fully capture the diverse and global artistic practices across experience levels and cultural contexts. 
