--- a/sections/4_interview_findings.tex
+++ b/sections/4_interview_findings.tex
@@ -2,7 +2,7 @@
 
 
 \subsection{Novice Visual Artists' Early-Stage Practices and Broader Contexts}
-We report below specific practices that novice visual artists currently engage in during the early stages of their creative workflows.
+We report specific practices that novice visual artists currently engage in during early stages of their creative workflows.
 \subsubsection{Motivations \& Communities for Art-Making.}
 Compared to professional or outcome-driven goals, novice participants were more motivated by (1) \textbf{intrinsic enjoyment} and (2) \textbf{interactions with others} that provided support and sources of inspiration. For instance, P6 described how \textit{``a lot of the art that I create on a slightly more frequent basis \dots is for journaling purposes''}, while P4 perceived art-making as \textit{``a very solo experience \dots  [that] I do alone to connect with myself and make something that makes me feel better about the world''} (P4). Beyond reflections, P10 related the calming benefits of art-making: \textit{``I really enjoy drawing old toys. \dots It['s] just a relaxing thing for me''} (P10). For others, motivation was shaped by moments of external recognition or affirmation, with several novices crediting teachers, friends, or family members who encouraged them to create art. P10 recalled a class where the teacher
 \textit{``ask[ed] me there}, `oh my gosh, are you an artist? This looks fantastic!' \dots \textit{So I started looking at Tiktok videos of it, and I was able to start painting with it''}. Several took up visual art after seeing other artist's work. Such experiences made novice artists like P12 \textit{``think of something that I've never thought of before. \dots and [then] I feel creative''} (P12). Together, these findings highlight how novice artists' motivation emerges from a blend of intrinsic enjoyment, relational encouragement, and a desire to respond creatively to the world around. 
@@ -47,82 +47,86 @@ Overall, participants weighed uneven access and limited familiarity against exci
 % Artists want to connect with the inspirations, techniques, and narratives behind human-made art for sense of community and belongingness. 
 % P9 share how AI-generated images rarely inspire them the way that real-world experiences or handmade works do, whereas the pleasure of searching for references and abstracting from reality cannot be replaced by AI generation.
 
+
+\input{tables/phase1_findings}
 % \begin{table}[t]
 % \centering
-% \begin{tabular}{|p{4cm}|p{7cm}|p{5cm}|}
+% \begin{tabular}{|p{4cm}|p{5cm}|p{4cm}|}
 % \hline
 % \textbf{Challenges} & \textbf{Suggestions} & \textbf{Relevant Existing Tools} \\
 % \hline
 
-% \textcolor{purple}{\textbf{4.1}} Quicker and Better Access to References &
+% \textcolor{purple}{\textbf{\ref{refs}}} Quicker and Better Access to References &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}   % reduce space between bullets
 %   \setlength\parskip{0pt}
-%   \item [4.1.1] Search using sketches or combined text+image inputs
-%   \item [4.1.2] Filter results by attributes
-%   \item [4.1.3] Organize personal and real life references
+%   \item [C1.1] Find references
+%   \item [C1.2] Organize references
+%   \item [C1.3] Filter by reference
 % \end{itemize} &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}
 %   \setlength\parskip{0pt}
 %   \item Semantic search
-%   \item add citations
 % \end{itemize} \\
 % \hline
 
-% \textcolor{purple}{\textbf{4.2}} Visualizing Combinations of References &
+% \textcolor{purple}{\textbf{\ref{visualize}}} Visualizing Combinations of References &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}
 %   \setlength\parskip{0pt}
-%   \item [4.2.1] Merge multiple images into one reference
-%   \item [4.2.2] Interactive editing such as angle and style
+%   \item [C2.1] Control a single image
+%   \item [C2.2] Combine multiple references
+%   \item [C2.3] Simulate new elements
 % \end{itemize} &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}
 %   \setlength\parskip{0pt}
-%   \item Semantic combination
-%   \item Transformation
-%   \item add citations
+%   \item Visual editing
+%   \item Style transfer
+%   \item Medium transfer
+%   \item Style combination
+%   \item Interactive 3D
 % \end{itemize} \\
 % \hline
 
-% \textcolor{purple}{\textbf{4.3}} Feedback from Another Artist's Perspective &
+% \textcolor{purple}{\textbf{\ref{feedback}}} Feedback from Another Artist's Perspective &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}
 %   \setlength\parskip{0pt}
-%   \item [4.3.1] Peer like suggestions on references or styles
-%   \item [4.3.2] Surface similar works with annotations
+%   \item [C3.1] Professional examples
+%   \item [C3.2] Outside perspective
 % \end{itemize} &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}
 %   \setlength\parskip{0pt}
-%   \item Personalized recommendations
-%   \item learning tools
+%   \item Visual interpretations
 % \end{itemize} \\
 % \hline
 
-% \textcolor{purple}{\textbf{4.4}} Support to Learn Art Techniques and Styles &
+% \textcolor{purple}{\textbf{\ref{support}}} Support to Learn Art Techniques and Styles &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}
 %   \setlength\parskip{0pt}
-%   \item [4.4.1] Step by step breakdowns of styles
-%   \item [4.4.2] Progressive suggestions during drawing or painting
+%   \item [C4.1] Support for goal setting
+%   \item [C4.2] Visual breakdown
 % \end{itemize} &
 % \begin{itemize}
 %   \setlength\itemsep{0pt}
 %   \setlength\parskip{0pt}
-%   \item Semantic decomposition
-%   \item Progressive generation
+%   \item Visual interpretations
+%   \item Step-by-step tutorials
 % \end{itemize} \\
 % \hline
+
 % \end{tabular}
-% \caption{Summary of Phase 1 Findings and connection to existing tools}
+% \caption{Summary of Phase 1 Findings and connection to existing tools \todo{we need to fix this and make it look nice}  }
 % \label{tab:phase1-summary}
 % \end{table}
 
 
 
-\textbf{\textit{Fig 1. Initial Taxonomy v1 after interviews (original needs/what participant mentioned/with lit examples of possible capabilities/considerations)}}
+\textbf{\textit{Fig 1. Initial Taxonomy after Phase 1 Interviews}} %\todo{is this in right place??}
 
 \subsection{Areas for Support in the Early-Stages} % validation findings need to go here 
 
@@ -189,6 +193,7 @@ These suggestions highlight artists' desire for tools that not only provide stat
 
 
 \subsubsection{Perspective and Feedback from Another Artist.}
+\label{feedback}
 
 Artists often struggled with identifying errors or areas for improvement on their own -- an artifact of lacking \textbf{timely, supportive feedback that matched their artistic intentions}. They highlighted unique challenges in this phase --- e.g., difficulty redoing parts of a piece without completely starting over or managing tools: \textit{``something that could have helped me catch that this arm had kind of [from a] wonky perspective before it got so far that I already colored and shaded -- it would have saved me a lot of time.''} (P3). This reflects a broader challenge of how artists access feedback and whose perspectives they can rely on.
 
@@ -201,6 +206,7 @@ Participants imagined tools that could replicate the sensitivity of an ‘\texti
 
 
 \subsubsection{Support to Learn Art Techniques and Styles.}
+\label{support}
 
 % Participants also described struggles with 
 Learning new techniques and styles on their own was a common among novices, with some finding it difficult to bridge the gap between observing others’ work and applying those methods in practice. This challenge was especially acute when artists attempted to adapt across mediums or translate from one stylistic tradition to another. For instance, P2 noted that \textit{``I'm not an art professional, so sometimes I would still struggle with techniques of painting certain things ... originally, I was learning traditional Chinese watercolor, and that's very different from Western watercolor''} (P2). To manage these difficulties, artists relied on practices such as copying interpretations of specific subjects when first learning (P2), recreating works through ``artist studies,'' following tutorials, or adapting pieces into different styles. Watching time-lapse or process videos (P11, P12) also helped demystify the effort behind finished pieces, making the process feel more approachable. Yet, translating observation into implementation was not always straightforward -- some expressed frustration when tutorials or advice were either too advanced or not grounded in the practical realities of their tools and materials (P2, P7). 
